<?xml version="1.0"?>
<package>
  <name>dvo_core</name>
  <version> 0.0.0 </version>
  <description> dvo_core </description>
  <author>Christian Kerl</author>
  <maintainer email="ruser@todo.todo">ruser</maintainer>
  <license>GPL</license>
 
  <url>http://ros.org/wiki/dvo_core</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend> opencv2</build_depend>
  <build_depend> pcl </build_depend>
  <build_depend> sophus </build_depend>
  <build_depend> common_rosdeps </build_depend>
  <build_depend> eigen </build_depend>
  <build_depend> tbb </build_depend>
  

  <run_depend> opencv2</run_depend>
  <run_depend> pcl </run_depend>
  <run_depend> sophus </run_depend>
  <run_depend> common_rosdeps </run_depend>
  <run_depend> eigen </run_depend>
  <run_depend> tbb </run_depend>

  <export>
    <!--missing ....incomplete -->
    <cpp cflags="`rosboost-cfg --cflags` -I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ldvo_core -ldvo_visualization"/> 
  </export>

</package>
